--- a/config/mgn.yaml
+++ b/config/mgn.yaml
@@ -7,21 +7,22 @@ wandb_mode: online
 directory: deformable_plate
 
 task:
-  task: trapez # trapez/poisson
-  model: self-supervised # mgn/supervised/self-supervised
+  task: poisson # trapez/poisson
+  model: mgn # mgn/supervised/self-supervised
   ggns: False # T/F
-  recurrence: gru # False/name
+  recurrence: rkn # False/name
   sequence: 5
   poisson_ratio: False # Link to use global with model
-  learning_rate: 1.0e-4
+  learning_rate: 3.0e-4
   weight_decay: 1.0e-5
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
-  epochs: 100
+  epochs: 150
   pretraining: 100
   reduced: False
-  imputation: [1, 2, 5]
+  subsampling: ifp # if voxel, reduced must be False. Non-recurrent only!
+  imputation: [5]
 
   test:
     trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during evaluation
@@ -50,6 +51,6 @@ model:
   heterogeneous: False
 
 poisson:
-  learning_rate: 5.0e-4
+  learning_rate: 3.0e-4
   weight_decay: 1.0e-5
-  epochs: 100
+  epochs: 150
