--- a/config/mgn.yaml
+++ b/config/mgn.yaml
@@ -7,20 +7,21 @@ wandb_mode: online
 directory: deformable_plate
 
 task:
-  task: trapez # trapez/poisson
-  model: self-supervised # mgn/supervised/self-supervised
+  task: poisson # trapez/poisson
+  model: mgn # mgn/supervised/self-supervised
   ggns: False # T/F
-  recurrence: gru # False/name
-  sequence: 5
+  recurrence: False # False/name
+  sequence: 1
   poisson_ratio: False # Link to use global with model
   learning_rate: 1.0e-4
-  weight_decay: 1.0e-5
+  weight_decay: 0
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
-  epochs: 100
+  epochs: 200
   pretraining: 100
   reduced: False
+  subsampling: ifp # if voxel, reduced must be False. Non-recurrent only!
   imputation: [1, 2, 5]
 
   test:
@@ -50,6 +51,6 @@ model:
   heterogeneous: False
 
 poisson:
-  learning_rate: 5.0e-4
-  weight_decay: 1.0e-5
-  epochs: 100
+  learning_rate: 1.0e-4
+  weight_decay: 0
+  epochs: 200
