--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -1,24 +1,24 @@
 name: "DEFAULT"   # MUST BE DEFAULT
 import_path: "default.yaml"
 
-random_seed: 115
+random_seed: 12
 retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
 wandb_mode: online
 directory: deformable_plate
 
 task:
-  task: trapez # trapez/poisson
+  task: poisson # trapez/poisson
   model: mgn # mgn/supervised/self-supervised
-  ggns: True # T/F
+  ggns: False # T/F
   recurrence: False # False/name
   sequence: 1
   poisson_ratio: False # Link to use global with model
-  learning_rate: 5.0e-4
+  learning_rate: 1.0e-4
   weight_decay: 0
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
-  epochs: 150
+  epochs: 200
   pretraining: 100
   reduced: False
   subsampling: ifp # if voxel, reduced must be False. Non-recurrent only!
@@ -37,8 +37,8 @@ task:
     rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
     n_steps: 10
     n_step_rollouts: 135
-    viz_interval: 50
-    n_viz: 5
+    viz_interval: 500
+    n_viz: 0
 
 model:
   feature_norm: False
@@ -51,6 +51,6 @@ model:
   heterogeneous: False
 
 poisson:
-  learning_rate: 5.0e-4
-  weight_decay: 1.0e-4
-  epochs: 2
+  learning_rate: 1.0e-4
+  weight_decay: 0
+  epochs: 200
