--- a/config/voxel.yaml
+++ b/config/voxel.yaml
@@ -1,7 +1,7 @@
 name: "DEFAULT"   # MUST BE DEFAULT
 import_path: "default.yaml"
 
-random_seed: 115
+random_seed: 0
 retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
 wandb_mode: online
 directory: deformable_plate
@@ -9,10 +9,10 @@ directory: deformable_plate
 task:
   task: trapez # trapez/poisson
   model: mgn # mgn/supervised/self-supervised
-  ggns: False # T/F
+  ggns: True # T/F
   recurrence: False # False/name
   sequence: 1
-  poisson_ratio: True # Link to use global with model
+  poisson_ratio: False # Link to use global with model
   learning_rate: 5.0e-4
   weight_decay: 0
   batch_size: 32
@@ -45,7 +45,7 @@ model:
   layer_norm: False
   layers: 1
   noise: 0.01
-  pc_noise: 0.0
+  pc_noise: 0.01
   aggregation: mean
   message_passing_steps: 5
   heterogeneous: False
