--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -10,9 +10,9 @@ task:
   task: trapez # trapez/poisson
   model: mgn # mgn/supervised/self-supervised
   ggns: False # T/F
-  recurrence: False # False/name
-  sequence: 1
-  poisson_ratio: True # Link to use global with model
+  recurrence: gru # False/name
+  sequence: 5
+  poisson_ratio: False # Link to use global with model
   learning_rate: 5.0e-4
   weight_decay: 0
   batch_size: 32
@@ -51,6 +51,6 @@ model:
   heterogeneous: False
 
 poisson:
-  learning_rate: 5.0e-4
-  weight_decay: 0
+  learning_rate: 3.0e-4
+  weight_decay: 1.0e-5
   epochs: 200
