--- a/config/base.yaml
+++ b/config/base.yaml
@@ -8,10 +8,10 @@ directory: deformable_plate
 
 task:
   task: trapez # trapez/poisson
-  model: mgn # mgn/supervised/self-supervised
+  model: supervised # mgn/supervised/self-supervised
   ggns: True # T/F
-  recurrence: False # False/name
-  sequence: 1
+  recurrence: gru # False/name
+  sequence: 5
   poisson_ratio: False # Link to use global with model
   learning_rate: 5.0e-4
   weight_decay: 0
@@ -51,6 +51,6 @@ model:
   heterogeneous: False
 
 poisson:
-  learning_rate: 5.0e-4
-  weight_decay: 0
+  learning_rate: 3.0e-4
+  weight_decay: 1.0e-5
   epochs: 200
